--- a/Inhalt/04_Inhalt/0200_fundamentals.tex
+++ b/Inhalt/04_Inhalt/0200_fundamentals.tex
@@ -10,7 +10,7 @@ Nowadays, Go is a popular choice for everything related to DevOps and therefore 
 Go also tries to provide its own, official solutions for common tasks in software development.
 When installing Go, it comes packed alongside with a formatter (which shall ensure uniform styling across all programs written in Go) and an included suite for unit testing, just to name a few examples.
 Furthermore, Go supports generating documentation based on comments in the source code; much alike JavaDoc.
-Go features an extensive standard library which depicts a good starting point for developing your own applications.
+Go features an extensive standard library which depicts a good starting point for developing new applications.
 In case one wants to include a third party library, this can be done via the \emph{go get} command.
 It fetches the necessary resources (usually directly from a \ac{vcs}) and saves the modules as a dependency in the \emph{go.mod} file. \cite{go.tour, go.docs}
 
