wrote german abstract

--- a/Inhalt/02_Abstract/abstract-de.tex
+++ b/Inhalt/02_Abstract/abstract-de.tex
@@ -11,7 +11,17 @@
 
 % LTeX: language=de-DE
 
-Platzhalter
+Umfassende Cloud-Service-Angebote sind ein wichtiger Bestandteil moderner Unternehmensinfrastruktur.
+Die Bereitstellung solcher Angebote erfolgt traditionell manuell, was sehr zeitaufwändig und daher kostspielig ist.
+Die Abteilung, die diesen Bericht betreut, arbeitet daran, diesen Bereitstellungsprozess und die damit verbundenen Wartungsaufgaben zu automatisieren, mit dem Ziel, Funktionalität zur Interaktion mit Infrastruktur als eigenständige \ac{cli} bereitzustellen.
+
+\vspace{0.25cm}
+
+Die Programme, die für die automatisierte Bereitstellung verwendet werden, können nicht ausgeführt werden, ohne dass einige Voraussetzungen erfüllt sind.
+Daher muss die Zielumgebung in einem Bootstrap vorbereitet werden.
+In diesem Projekt wird das bestehende Bootstrap-Verfahren analysiert, neu gestaltet und implementiert, um in die entwickelte \ac{cli} integriert zu werden.
+Es werden verschiedene Ansätze zur Interaktion mit den beteiligten Diensten vorgestellt und verglichen.
+Anschließend wird ein Prototyp des Bootstraps in Go implementiert.
 
 \end{addmargin}
 \end{abstract}
