--- a/Inhalt/02_Abstract/abstract-en.tex
+++ b/Inhalt/02_Abstract/abstract-en.tex
@@ -13,7 +13,7 @@
 
 Large scale cloud service offerings are an important part of modern enterprise infrastructure.
 The deployment of these is traditionally done manually, which is very time-consuming and therefore costly.
-The department, supervising this report, works on automizing this deployment process and related maintenance tasks with the aim to provide the interaction functionality as a self-contained \ac{cli}.
+The department, supervising this report, works on automizing this deployment process and related maintenance tasks with the aim to provide functionality to interact with infrastructure as a self-contained \ac{cli}.
 
 \vspace{0.25cm}
 
