corrected supervisor name

--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -28,7 +28,7 @@
 \newcommand{\firmaName}{SAP SE}
 \newcommand{\firmaStrasse}{Dietmar-Hopp-Allee 16}
 \newcommand{\firmaPlz}{69190 Walldorf, Deutschland}
-\newcommand{\betreuerFirma}{Samed Guener} % TODO: doch Jan einsetzen? TODO: Mit Umlaut?
+\newcommand{\betreuerFirma}{Samed Güner} % TODO: doch Jan einsetzen? TODO: Mit Umlaut?
 \newcommand{\betreuerDhbw}{Prof. Dr. Johannes Freudenmann}
 
 \input{Inhalt/00_Latex/kopfundFusszeile}
