--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -67,7 +67,7 @@
 \begin{otherlanguage}{ngerman}
     % ------ Erklärung, Sperrvermerk, Abstact
     \include{Inhalt/01_Standard/erklaerung}
-    \include{Inhalt/01_Standard/sperrvermerk}
+    % \include{Inhalt/01_Standard/sperrvermerk}
     \include{Inhalt/02_Abstract/abstract-en}
     \include{Inhalt/02_Abstract/abstract-de}
 \end{otherlanguage}
